# Mechanical_Engineering_Researcher

./: .env  .gitignore  README.md  pyproject.toml
src/mechanical_engineering_researcher/: __init__.py  global_config.py
